Refactor and add update emails

--- a/src/config.conf
+++ b/src/config.conf
@@ -2,4 +2,12 @@
 
 [Config]
     PROJECT_NAME: python-run-327415
-    BUCKET_NAME: gce_py_output
+    BUCKET_NAME: gce_py_output2
+
+[SMTP]
+    SERVER: smtp.gmail.com
+    PORT: 587
+    LOGIN: lukas.wallrich@gmail.com
+    PWD: uuqkralkghapvypy
+    RECEIVER_EMAIL: lukas.wallrich@gmail.com
+    SENDER_EMAIL: lukas.wallrich@gmail.com
