Local tests work

--- a/src/config.conf
+++ b/src/config.conf
@@ -2,7 +2,7 @@
 
 [Config]
     PROJECT_NAME: python-run-327415
-    BUCKET_NAME: gce_py_output
+    BUCKET_NAME: gce_py_output3
 
 [SMTP]
     SERVER: smtp.gmail.com
