Capture errors and try prefixes again

--- a/src/config.conf
+++ b/src/config.conf
@@ -3,7 +3,7 @@
 [Config]
     PROJECT_NAME: python-run-327415
     BUCKET_NAME: gce_py_output3
-    FILE_PREFIX: test
+    FILE_PREFIX: new-test
 
 [SMTP]
     SERVER: smtp.gmail.com
