Update project name

--- a/src/config.conf
+++ b/src/config.conf
@@ -1,7 +1,7 @@
 [Auth]
 
 [Config]
-    PROJECT_NAME: python-run-327415
+    PROJECT_NAME: test-project-329910
     BUCKET_NAME: test-gcepy
     FILE_PREFIX: new-test
 
