--- a/src/config.conf
+++ b/src/config.conf
@@ -1,8 +1,8 @@
 [Auth]
 
 [Config]
-    BUCKET_NAME: test-gcepy
-    FILE_PREFIX: new-test
+    BUCKET_NAME: diversity_simulations
+    FILE_PREFIX: Grim
 
 [SMTP]
     SERVER: smtp.gmail.com
