--- a/src/config.conf
+++ b/src/config.conf
@@ -1,8 +1,8 @@
 [Auth]
 
 [Config]
-    BUCKET_NAME: diversity_simulations
-    FILE_PREFIX: Grim
+    BUCKET_NAME:diversity_simulations
+    FILE_PREFIX: HP
 
 [SMTP]
     SERVER: smtp.gmail.com
