Add dedicated email account

--- a/src/config.conf
+++ b/src/config.conf
@@ -7,7 +7,7 @@
 [SMTP]
     SERVER: smtp.gmail.com
     PORT: 587
-    LOGIN: lukas.wallrich@gmail.com
-    PWD: uuqkralkghapvypy
+    LOGIN: pyscript.update@gmail.com
+    PWD: pyscript2gce!!
     RECEIVER_EMAIL: lukas.wallrich@gmail.com
-    SENDER_EMAIL: lukas.wallrich@gmail.com
+    SENDER_EMAIL: pyscript.update@gmail.com
