Fix email and exec command

--- a/src/config.conf
+++ b/src/config.conf
@@ -8,6 +8,6 @@
     SERVER: smtp.gmail.com
     PORT: 587
     LOGIN: pyscript.update@gmail.com
-    PWD: pyscript2gce!!
+    PWD: zuqxsgdooidymsum
     RECEIVER_EMAIL: lukas.wallrich@gmail.com
     SENDER_EMAIL: pyscript.update@gmail.com
