Ready for another Grim run

--- a/src/config.conf
+++ b/src/config.conf
@@ -2,7 +2,7 @@
 
 [Config]
     BUCKET_NAME:diversity_simulations
-    FILE_PREFIX: Grim
+    FILE_PREFIX: GrimReal
 
 [SMTP]
     SERVER: smtp.gmail.com
