changed email address

--- a/src/config.conf
+++ b/src/config.conf
@@ -9,5 +9,5 @@
     PORT: 587
     LOGIN: pyscript.update@gmail.com
     PWD: zuqxsgdooidymsum
-    RECEIVER_EMAIL: lukas.wallrich@gmail.com
+    RECEIVER_EMAIL: marieke.woe@gmail.com # MW: Changed from lukas.wallrich@gmail.com
     SENDER_EMAIL: pyscript.update@gmail.com
