changed bucket name

--- a/src/config.conf
+++ b/src/config.conf
@@ -1,13 +1,13 @@
 [Auth]
 
 [Config]
-    BUCKET_NAME:diversity_simulations
+    BUCKET_NAME: rescience-review-diversity-abm # MW: Changed from diversity_simulations
     FILE_PREFIX: Grim_sweep
 
-[SMTP]
-    SERVER: smtp.gmail.com
-    PORT: 587
-    LOGIN: pyscript.update@gmail.com
-    PWD: zuqxsgdooidymsum
-    RECEIVER_EMAIL: marieke.woe@gmail.com # MW: Changed from lukas.wallrich@gmail.com
-    SENDER_EMAIL: pyscript.update@gmail.com
+#[SMTP]
+#    SERVER: smtp.gmail.com
+#    PORT: 587
+#    LOGIN: pyscript.update@gmail.com
+#    PWD: zuqxsgdooidymsum
+#    RECEIVER_EMAIL: marieke.woe@gmail.com # MW: Changed from lukas.wallrich@gmail.com
+#    SENDER_EMAIL: pyscript.update@gmail.com
